# C_plus_plus_Projects

./: Bank_system.cpp  Bookshop_management_system.cpp  CMakeLists.txt  Phone_Book.cpp  README.md  webcam.cpp
Academic exercises/: Matrix.h  Matrix.hpp  MatrixLike.h  MatrixProduct.cpp  MatrixTest.cpp  README.md  Solver.cpp  Stencil.h  Vector.h
Basic C_plus_plus exercise/: Basic_1.cpp  Basic_code.cpp  Exception.cpp  Friend_dunction.cpp  Inheritance.cpp  Project_Bank_system.cpp  README.md  Random_number.cpp  Templates.cpp  a_class_header.cpp  a_class_header.h  a_mian_class.cpp  arrow_operator.cpp  class_declaration.cpp  function_overriding.cpp  list.cpp  member_initialization.cpp  operating_overload.cpp  pointer.cpp  static_member_function.cpp  this_pointer.cpp  virtual_function.cpp
Bookshop_Management_system/: README.md
Digital_clock/: Readme.md  digital_clock.cpp
Document_scanner with OpenCV_CMake/: Document_scanner.cpp  README.md
Face detection with OpenCV/: CMakeLists.txt  Face_detection.cpp  README.md  shapes_Detection.cpp
Image processing with OpenCV-CMake/: README.md  image_processing.cpp  web_image.cpp
License Plate recognition with OpenCV-CMake/: README.md  license_plate_recognition.cpp
Machin learning/: CMakeLists.txt  README.md  logistic_regression_main.cpp
Machin learning/include/: function_linear_regression.h
Machin learning/src/: Linear_regression.cpp  function_Linear_regression.cpp
Phone book and Bank system/: README.md
Phone_book_app/: Phone_Book.cpp  README.md
Simple_bank_system/: README.md
Student_record_management/: README.md  adminFunction.h  loading_Bar.h  student_record_main.cpp
Virtual paint board with OpenCV- CMake/: Readme.md  virtual_paint.cpp
shop_Management_system/: README.md  Shop_management_system.cpp
(+27 files in other folders)
